--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     SPACE &amp; COSMOS
                     </a>
                 </div>
-                <div class="logo-nav">
+                <div class="logo-nav-header">
                     <img class="logo" src="images/NewYorkTimes.svg" height="36">
                 </div>
                 <div class="right-nav">
@@ -467,6 +467,22 @@
                         <li><a href="https://cn.nytimes.com/" target="_blank" rel="noopener noreferrer">中文网</a></li>
                     </ul>
                 </div>
+            </div>
+            <div class="footer-list-div">
+                <ul class="footer-list">
+                    <li><a href="#">© 2021 The New York Times Company</a></li>
+                    <li><a href="#">NYTCo</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Work with us</a></li>
+                    <li><a href="#">Advertise</a></li>
+                    <li><a href="#">T BRand Studio</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Terms of Sale</a></li>
+                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Subscriptions</a></li>
+                </ul>
             </div>
         </footer>
     </div>
